--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -23,7 +23,7 @@
             app:fabCustomSize="60dp"
             app:fabSize="normal"
             app:maxImageSize="84dp"
-            app:srcCompat="@drawable/arrow_left_svgrepo_com"
+            app:srcCompat="@drawable/left_arrow"
             tools:layout_editor_absoluteX="1dp"
             tools:layout_editor_absoluteY="0dp"
             android:layout_marginRight="20dp"/>
@@ -46,7 +46,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent convallis ligula ac fermentum efficitur. Nulla accumsan consectetur dapibus. In rhoncus justo id justo laoreet, non lacinia odio pharetra. Proin malesuada orci metus, ac ullamcorper dolor tempus quis. Cras pretium efficitur magna ac rhoncus. Morbi sit amet massa ac erat porta rhoncus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tempor, metus vel tristique tincidunt, diam leo luctus nibh, in porta neque ligula ut enim. Cras quis malesuada sem, nec rutrum dui. Curabitur et faucibus nunc. In tincidunt, est vel lacinia vestibulum, dolor ipsum scelerisque elit, eu eleifend odio felis eu dolor. Vivamus auctor porttitor lectus ac aliquet. Ut mollis justo in tempor dapibus. Nam risus lectus, luctus ut odio nec, suscipit vulputate nulla."
+        android:text="@string/text_placeholder"
         tools:layout_editor_absoluteX="20dp"
         tools:layout_editor_absoluteY="177dp"
         android:textColor="@color/secondary"/>
