--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -4,29 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StatsActivity"
-    android:padding="20dp"
+    android:background="@color/primary"
     android:orientation="vertical"
-    android:background="@color/primary">
+    android:padding="20dp"
+    tools:context=".StatsActivity"
+    android:layout_centerHorizontal="true">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:layout_marginBottom="50dp">
+        android:layout_marginBottom="50dp"
+        android:gravity="center_vertical">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/menuButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
             android:clickable="true"
             app:fabCustomSize="60dp"
             app:fabSize="normal"
             app:maxImageSize="84dp"
-            app:srcCompat="@drawable/arrow_left_svgrepo_com"
+            app:srcCompat="@drawable/left_arrow"
             tools:layout_editor_absoluteX="1dp"
-            tools:layout_editor_absoluteY="0dp"
-            android:layout_marginRight="20dp"/>
+            tools:layout_editor_absoluteY="0dp" />
 
         <TextView
             android:id="@+id/textView"
@@ -40,5 +41,52 @@
             tools:layout_editor_absoluteY="40dp" />
 
     </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Predkość pokonywania rekinów"
+        android:textAlignment="center"
+        android:textColor="@color/secondary"
+        android:textSize="20dp"
+        android:layout_marginBottom="30dp"/>
+
+    <EditText
+        android:id="@+id/amount"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Ilość pokonanych rekinów"
+        android:inputType="number"
+        android:textColor="@color/secondary"
+        android:textColorHint="@color/secondary"
+        android:layout_marginBottom="20dp"
+        />
+
+    <EditText
+        android:id="@+id/time"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Czas w minutach"
+        android:inputType="number"
+        android:textColor="@color/secondary"
+        android:textColorHint="@color/secondary"
+        />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Oblicz"
+        />
+
+    <TextView
+        android:id="@+id/result"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textAlignment="center"
+        android:textColor="@color/secondary"
+        android:textSize="20dp"
+        />
 
 </LinearLayout>
